Update mongo configuration. Move mongo configuration to separate class and file from server configuration. Fix issues with mongo configuration parsing.